tests/NormalTests/paczka1/small_fuzzy/79806718.err
Error in line 3: S191 A334 29,6
Error in line 6: AeJZ67w A334 49,1
Error in line 11: AeJZ67w A8 71,14
Error in line 5: S191 S560 5,3
Error in line 9: h2pwn0dq S560 32,4
